--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -58,7 +58,7 @@
           <#else>
          	<br />
           </#if>
-          <#if hasIntership>
+          <#if hasIntership?? && hasIntership>
           	 <a href="#review">
 	         	<p class="info pointer">
 		         	<i class="fas fa-marker fa-fw w3-margin-right "></i>
@@ -220,7 +220,7 @@
       </div>
       
       <!-- Review modal -->
-      <#if studente?? && hasIntership??>
+      <#if studente?? && hasIntership?? && hasIntership>
       <div id="review" class="overlay">
 	    <div class="w3-card w3-white w3-round popup w3-padding">
 	
@@ -228,7 +228,7 @@
 	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
 	        <h2>Pareri su ${azienda.nome}</h2>
 	      </div>
-	        <form class="w3-container" action="./azienda?referrer=azienda?azienda=${azienda.utente}" method="post">
+	        <form class="w3-container" action="./azienda?referer=azienda?azienda=${azienda.utente}" method="post">
 		        <div class="w3-section">
 		          <!-- The user CF is hidden, it is used to retrieve the current user from database -->
 		          <input type="hidden" name="utente" value="${studente.utente}" />
