--- a/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-offerta-tirocinio.ftl.html
@@ -41,7 +41,7 @@
 		         </p>
 	         </a>
           </#if>
-          <#if hasIntership>
+          <#if hasIntership?? && hasIntership>
         	<a href="#review">
 	         	<p class="info pointer">
 		         	<i class="fas fa-marker fa-fw w3-margin-right "></i>
@@ -159,7 +159,7 @@
 	      	<a href="#" class="w3-button w3-xlarge w3-display-topright">&times;</a>
 	        <h2>Esprimi il tuo parere su questo tirocinio</h2>
 	      </div>
-	        <form class="w3-container" action="./offertaTirocinio?referrer=offertaTirocinio?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post">
+	        <form class="w3-container" action="./offertaTirocinio?referer=offertaTirocinio?id_tirocinio=${offertaTirocinio.idTirocinio}" method="post">
 		        <div class="w3-section">
 		          <!-- The user CF is hidden, it is used to retrieve the current user from database -->
 		          <input type="hidden" name="utente" value="${studente.utente}" />
