Added security checks on uploader and downloader servlet, minor graphic improvements

--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -214,7 +214,7 @@ input#menu {
 }
 
 input:checked ~ .menu-content-2{
-	max-height: 500px;
+	max-height: 74vh;
 	overflow-y: scroll;
     font-size: 100%;	
 }
