--- a/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
+++ b/IntershipTutor/WebContent/templates/dettaglio-azienda.ftl.html
@@ -231,7 +231,7 @@
 	        <form class="w3-container" action="./azienda?referer=azienda?azienda=${azienda.utente}" method="post">
 		        <div class="w3-section">
 		          <!-- The user CF is hidden, it is used to retrieve the current user from database -->
-		          <input type="hidden" name="utente" value="${studente.utente}" />
+		          <!-- <input type="hidden" name="utente" value="${studente.utente}" />  -->
 		          <input type="hidden" name="azienda" value="${azienda.utente}" />
 		          <#if parere??>
 		          		<!-- To update the review -->
