--- a/IntershipTutor/WebContent/templates/tirocini-conclusi.ftl.html
+++ b/IntershipTutor/WebContent/templates/tirocini-conclusi.ftl.html
@@ -88,7 +88,7 @@
 							</button>
 						</a>
 						</div>
-						<form action="upload?candidato=${candidato.utente}&utente=${azienda.utente}&referer=tirocinioStudente?id_tirocinio=${offertaTirocinio.idTirocinio}&candidati=candidati" method="post" enctype='multipart/form-data'>
+						<form action="upload?candidato=${candidato.utente}&referer=tirocinioStudente?id_tirocinio=${offertaTirocinio.idTirocinio}&candidati=candidati" method="post" enctype='multipart/form-data'>
 						    <input class="w3-padding w3-margin-top" type="file" name="file" />
 						    <button id="send" class="w3-button pointer fas fa-upload w3-round " type="submit" > Carica documento</button>
 						</form>
