--- a/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
+++ b/IntershipTutor/WebContent/templates/homepage-studente.ftl.html
@@ -56,12 +56,12 @@
 			               		</p>
 			               		<p class="info"><i>Progetto formativo:</i></p>
 			               		<#if tirocinioStudente.stato.name() == "accettato">
-			               			<form action="upload?candidato=${utente.utente}&utente=${utente.utente}" method="post" enctype='multipart/form-data'>
+			               			<form action="upload?candidato=${utente.utente}" method="post" enctype='multipart/form-data'>
 									    <input type="file" name="file" />
 									    <input class="pointer" type="submit" value="&#xf093" />
 									</form>
 			               			<p class="info pointer">
-				               			<a href="download?candidato=${utente.utente}&utente=${utente.utente}">
+				               			<a href="download?candidato=${utente.utente}">
 					               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 					               			Progetto formativo
 				               			</a>	
@@ -81,7 +81,7 @@
 			               		</p>
 			               		<p class="info"><i>Stato richiesta:</i></p>
 			               		<p class="info pointer">
-			               			<a href="download?candidato=${utente.utente}&utente=${utente.utente}">
+			               			<a href="download?candidato=${utente.utente}">
 				               			<i class="fas fa-download fa-fw w3-margin-right w3-margin-bottom w3-text-theme"></i>
 				               			Progetto formativo
 			               			</a>	
