Added font locally

--- a/IntershipTutor/WebContent/templates/container.ftl.html
+++ b/IntershipTutor/WebContent/templates/container.ftl.html
@@ -6,10 +6,10 @@
     <link rel="icon" href="img/univaq_logo.png">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.2.0/css/all.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
-    <link href="style/w3.css" rel="stylesheet">
+    <link href="style/fontawesome/regular.min.css" rel="stylesheet">
+    <link href="style/fontawesome/solid.min.css" rel="stylesheet">
+    <link href="style/fontawesome/fontawesome.min.css" rel="stylesheet">
+    <link href="style/w3/w3.css" rel="stylesheet">
     <#if page_css??>
     	<link href="style/${page_css}.css" rel="stylesheet">
     </#if>
