--- a/IntershipTutor/WebContent/style/container.css
+++ b/IntershipTutor/WebContent/style/container.css
@@ -1,3 +1,11 @@
+@font-face {
+    font-family: FontAwesome;
+    src: url('webfonts/fa-regular-400.woff');
+    src: url('webfonts/fa-regular-400.woff2');
+    src: url('webfonts/fa-solid-900.woff');
+    src: url('webfonts/fa-solid-900.woff2');
+}
+
 * {
     font-family: "Open Sans", sans-serif
 }
